@@ -7,6 +7,9 @@ Version 1.3.2+svn:
    * [store_villages] and [store_locations] now use the standard location 
      filter, meaning they accept all the possible keys of [filter_location]
    * [store_villages] must now use owner_side= instead of side=
+   * replace [own_village] with macro {OWN_VILLAGE X Y SIDE}
+   * new conditional tag [have_location], tests true if any location passes
+     the standard location filter provided inside the tag
  * Miscellaneous and bugfixes
    * 1.2 savegames are no longer compatible and thus not loaded
 
